# pyproject.toml
[tool.poetry]
name = "kubernetes-debugger"
version = "0.1.0"
description = "LLM-powered Kubernetes cluster debugger"
authors = ["Chris Sanders <sanders.chris@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0.1"
anthropic = "^0.5.0"
openai = "^1.3.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
pylint = "^3.0.2"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
